project done with responsive

--- a/css/style.css
+++ b/css/style.css
@@ -714,8 +714,14 @@
   .mt-\[30px\] {
     margin-top: 30px;
   }
+  .mt-\[40px\] {
+    margin-top: 40px;
+  }
   .mt-\[60px\] {
     margin-top: 60px;
+  }
+  .ml-3 {
+    margin-left: calc(var(--spacing) * 3);
   }
   .ml-6 {
     margin-left: calc(var(--spacing) * 6);
@@ -807,12 +813,44 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .size-\[30px\] {
+    width: 30px;
+    height: 30px;
+  }
+  .size-\[35px\] {
+    width: 35px;
+    height: 35px;
+  }
   .size-\[58px\] {
     width: 58px;
     height: 58px;
   }
+  .h-\[30px\] {
+    height: 30px;
+  }
+  .h-\[40px\] {
+    height: 40px;
+  }
   .h-\[94px\] {
     height: 94px;
+  }
+  .h-\[150px\] {
+    height: 150px;
+  }
+  .h-\[200px\] {
+    height: 200px;
+  }
+  .h-\[240px\] {
+    height: 240px;
+  }
+  .h-\[260px\] {
+    height: 260px;
+  }
+  .h-\[270px\] {
+    height: 270px;
+  }
+  .h-\[280px\] {
+    height: 280px;
   }
   .h-\[290px\] {
     height: 290px;
@@ -822,6 +860,9 @@
   }
   .h-\[595px\] {
     height: 595px;
+  }
+  .h-full {
+    height: 100%;
   }
   .h-screen {
     height: 100vh;
@@ -841,6 +882,9 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-\[130px\] {
+    width: 130px;
+  }
   .w-\[400px\] {
     width: 400px;
   }
@@ -853,6 +897,12 @@
   .max-w-\[130px\] {
     max-width: 130px;
   }
+  .max-w-\[400px\] {
+    max-width: 400px;
+  }
+  .max-w-\[520px\] {
+    max-width: 520px;
+  }
   .max-w-\[770px\] {
     max-width: 770px;
   }
@@ -861,6 +911,9 @@
   }
   .max-w-screen {
     max-width: 100vw;
+  }
+  .min-w-\[40px\] {
+    min-width: 40px;
   }
   .min-w-\[247px\] {
     min-width: 247px;
@@ -1270,17 +1323,29 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
   .gap-\[10px\] {
     gap: 10px;
   }
-  .gap-\[300px\] {
-    gap: 300px;
+  .gap-\[18px\] {
+    gap: 18px;
+  }
+  .gap-\[20px\] {
+    gap: 20px;
   }
   .gap-\[30px\] {
     gap: 30px;
+  }
+  .gap-\[50px\] {
+    gap: 50px;
   }
   .gap-\[70px\] {
     gap: 70px;
@@ -1290,6 +1355,9 @@
   }
   .gap-\[115px\] {
     gap: 115px;
+  }
+  .gap-\[300px\] {
+    gap: 300px;
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -1704,6 +1772,9 @@
   .py-\[12px\] {
     padding-block: 12px;
   }
+  .pt-4 {
+    padding-top: calc(var(--spacing) * 4);
+  }
   .pt-\[10px\] {
     padding-top: 10px;
   }
@@ -1718,6 +1789,9 @@
   }
   .pt-\[45px\] {
     padding-top: 45px;
+  }
+  .pb-2 {
+    padding-bottom: calc(var(--spacing) * 2);
   }
   .pb-\[20px\] {
     padding-bottom: 20px;
@@ -1785,11 +1859,20 @@
   .align-top {
     vertical-align: top;
   }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
+  .text-\[12px\] {
+    font-size: 12px;
+  }
   .text-\[13px\] {
     font-size: 13px;
   }
   .text-\[14px\] {
     font-size: 14px;
+  }
+  .text-\[15px\] {
+    font-size: 15px;
   }
   .text-\[16px\] {
     font-size: 16px;
@@ -1797,8 +1880,14 @@
   .text-\[18px\] {
     font-size: 18px;
   }
+  .text-\[22px\] {
+    font-size: 22px;
+  }
   .text-\[24px\] {
     font-size: 24px;
+  }
+  .text-\[25px\] {
+    font-size: 25px;
   }
   .text-\[35px\] {
     font-size: 35px;
@@ -1806,9 +1895,9 @@
   .text-\[36px\] {
     font-size: 36px;
   }
-  .leading-0 {
-    --tw-leading: calc(var(--spacing) * 0);
-    line-height: calc(var(--spacing) * 0);
+  .leading-\[10px\] {
+    --tw-leading: 10px;
+    line-height: 10px;
   }
   .leading-\[13px\] {
     --tw-leading: 13px;
@@ -1817,6 +1906,18 @@
   .leading-\[15px\] {
     --tw-leading: 15px;
     line-height: 15px;
+  }
+  .leading-\[16px\] {
+    --tw-leading: 16px;
+    line-height: 16px;
+  }
+  .leading-\[18px\] {
+    --tw-leading: 18px;
+    line-height: 18px;
+  }
+  .leading-\[19px\] {
+    --tw-leading: 19px;
+    line-height: 19px;
   }
   .leading-\[20px\] {
     --tw-leading: 20px;
@@ -2364,6 +2465,286 @@
   }
   .transform-view {
     transform-box: view-box;
+  }
+  .sm\:inline-block {
+    @media (width >= 640px) {
+      display: inline-block;
+    }
+  }
+  .sm\:size-\[60px\] {
+    @media (width >= 640px) {
+      width: 60px;
+      height: 60px;
+    }
+  }
+  .sm\:h-\[230px\] {
+    @media (width >= 640px) {
+      height: 230px;
+    }
+  }
+  .sm\:min-w-\[520px\] {
+    @media (width >= 640px) {
+      min-width: 520px;
+    }
+  }
+  .sm\:min-w-\[610px\] {
+    @media (width >= 640px) {
+      min-width: 610px;
+    }
+  }
+  .sm\:min-w-\[614px\] {
+    @media (width >= 640px) {
+      min-width: 614px;
+    }
+  }
+  .sm\:min-w-\[616px\] {
+    @media (width >= 640px) {
+      min-width: 616px;
+    }
+  }
+  .sm\:min-w-\[617px\] {
+    @media (width >= 640px) {
+      min-width: 617px;
+    }
+  }
+  .sm\:grid-cols-2 {
+    @media (width >= 640px) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .sm\:grid-cols-\[185px_1fr\] {
+    @media (width >= 640px) {
+      grid-template-columns: 185px 1fr;
+    }
+  }
+  .sm\:grid-cols-\[340px_1fr\] {
+    @media (width >= 640px) {
+      grid-template-columns: 340px 1fr;
+    }
+  }
+  .sm\:gap-\[40px\] {
+    @media (width >= 640px) {
+      gap: 40px;
+    }
+  }
+  .sm\:gap-\[50px\] {
+    @media (width >= 640px) {
+      gap: 50px;
+    }
+  }
+  .sm\:gap-\[70px\] {
+    @media (width >= 640px) {
+      gap: 70px;
+    }
+  }
+  .sm\:gap-\[100px\] {
+    @media (width >= 640px) {
+      gap: 100px;
+    }
+  }
+  .sm\:gap-\[120px\] {
+    @media (width >= 640px) {
+      gap: 120px;
+    }
+  }
+  .md\:h-\[250px\] {
+    @media (width >= 768px) {
+      height: 250px;
+    }
+  }
+  .md\:h-\[380px\] {
+    @media (width >= 768px) {
+      height: 380px;
+    }
+  }
+  .md\:min-w-\[745px\] {
+    @media (width >= 768px) {
+      min-width: 745px;
+    }
+  }
+  .md\:grid-cols-\[340px_1fr\] {
+    @media (width >= 768px) {
+      grid-template-columns: 340px 1fr;
+    }
+  }
+  .md\:grid-cols-\[500px_1fr\] {
+    @media (width >= 768px) {
+      grid-template-columns: 500px 1fr;
+    }
+  }
+  .md\:gap-\[60px\] {
+    @media (width >= 768px) {
+      gap: 60px;
+    }
+  }
+  .md\:gap-\[170px\] {
+    @media (width >= 768px) {
+      gap: 170px;
+    }
+  }
+  .lg\:mt-\[60px\] {
+    @media (width >= 1024px) {
+      margin-top: 60px;
+    }
+  }
+  .lg\:ml-6 {
+    @media (width >= 1024px) {
+      margin-left: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:hidden {
+    @media (width >= 1024px) {
+      display: none;
+    }
+  }
+  .lg\:inline {
+    @media (width >= 1024px) {
+      display: inline;
+    }
+  }
+  .lg\:inline-block {
+    @media (width >= 1024px) {
+      display: inline-block;
+    }
+  }
+  .lg\:size-\[58px\] {
+    @media (width >= 1024px) {
+      width: 58px;
+      height: 58px;
+    }
+  }
+  .lg\:h-\[94px\] {
+    @media (width >= 1024px) {
+      height: 94px;
+    }
+  }
+  .lg\:h-\[290px\] {
+    @media (width >= 1024px) {
+      height: 290px;
+    }
+  }
+  .lg\:h-full {
+    @media (width >= 1024px) {
+      height: 100%;
+    }
+  }
+  .lg\:w-\[130px\] {
+    @media (width >= 1024px) {
+      width: 130px;
+    }
+  }
+  .lg\:w-full {
+    @media (width >= 1024px) {
+      width: 100%;
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 1024px) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
+  .lg\:grid-cols-\[285px_1fr\] {
+    @media (width >= 1024px) {
+      grid-template-columns: 285px 1fr;
+    }
+  }
+  .lg\:gap-5 {
+    @media (width >= 1024px) {
+      gap: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:gap-\[30px\] {
+    @media (width >= 1024px) {
+      gap: 30px;
+    }
+  }
+  .lg\:gap-\[70px\] {
+    @media (width >= 1024px) {
+      gap: 70px;
+    }
+  }
+  .lg\:gap-\[85px\] {
+    @media (width >= 1024px) {
+      gap: 85px;
+    }
+  }
+  .lg\:gap-\[115px\] {
+    @media (width >= 1024px) {
+      gap: 115px;
+    }
+  }
+  .lg\:gap-\[230px\] {
+    @media (width >= 1024px) {
+      gap: 230px;
+    }
+  }
+  .lg\:gap-\[300px\] {
+    @media (width >= 1024px) {
+      gap: 300px;
+    }
+  }
+  .lg\:pb-\[25px\] {
+    @media (width >= 1024px) {
+      padding-bottom: 25px;
+    }
+  }
+  .lg\:pb-\[40px\] {
+    @media (width >= 1024px) {
+      padding-bottom: 40px;
+    }
+  }
+  .lg\:pb-\[42px\] {
+    @media (width >= 1024px) {
+      padding-bottom: 42px;
+    }
+  }
+  .lg\:pb-\[60px\] {
+    @media (width >= 1024px) {
+      padding-bottom: 60px;
+    }
+  }
+  .lg\:text-\[14px\] {
+    @media (width >= 1024px) {
+      font-size: 14px;
+    }
+  }
+  .lg\:text-\[16px\] {
+    @media (width >= 1024px) {
+      font-size: 16px;
+    }
+  }
+  .lg\:text-\[18px\] {
+    @media (width >= 1024px) {
+      font-size: 18px;
+    }
+  }
+  .lg\:text-\[35px\] {
+    @media (width >= 1024px) {
+      font-size: 35px;
+    }
+  }
+  .lg\:text-\[36px\] {
+    @media (width >= 1024px) {
+      font-size: 36px;
+    }
+  }
+  .lg\:leading-\[20px\] {
+    @media (width >= 1024px) {
+      --tw-leading: 20px;
+      line-height: 20px;
+    }
+  }
+  .lg\:leading-\[23px\] {
+    @media (width >= 1024px) {
+      --tw-leading: 23px;
+      line-height: 23px;
+    }
+  }
+  .lg\:leading-\[38px\] {
+    @media (width >= 1024px) {
+      --tw-leading: 38px;
+      line-height: 38px;
+    }
   }
 }
 @layer utilities {
